Corrected a few things and more code generation
